--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
+    "hls.js": "^1.5.18",
     "ws": "^8.18.0"
   }
 }
