--- a/rtm/docker-compose.yml
+++ b/rtm/docker-compose.yml
@@ -10,3 +10,15 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     restart: always
+
+  srs-server:
+    image: ossrs/srs:4
+    container_name: srs-server
+    ports:
+      - "1985:1985" # WebRTC signaling
+      - "8088:8088" # HTTP API
+      - "8000:8000" # WebRTC playback port
+      - "1936:1935" # RTMP port for SRS
+    restart: always
+    command: >
+      ./objs/srs -c /usr/local/srs/conf/docker.conf
